infrastructures/k8s/manifests/istio/egressgateway/postgres-egress-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: postgres-egress-gw
  namespace: staging
spec:
  selector:
    istio: egressgateway
  servers:
    - port:
        number: 5432
        name: tcp-postgres
        protocol: TCP
      hosts:
        - postgres.external.db
