infrastructures/k8s/manifests/istio/egressgateway/egressgateway-for-postgres.yaml
# Rule for traffic going from your app sidecar to the Egress Gateway
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: egressgateway-for-postgres
  namespace: staging
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
    - name: postgres
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL # Uses mTLS inside the mesh
---
# Rule for traffic leaving the Egress Gateway to the external DB
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: external-postgres-dr
  namespace: staging
spec:
  host: postgres.external.db
  trafficPolicy:
    tls:
      mode: DISABLE # Turns off Istio mTLS because the external DB doesn't speak it (standard TLS/TCP handled by Postgres driver)
